--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎛</text></svg>">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Multitrack</title>
+  <title>Mixdown</title>
 </head>
 
 <body class="bg-violet-100">
